--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    Lorem ipsum dolor, sit amet consectetur aaaa elit. Debitis neque, modi, ad ipsum dolorum omnis consequatur aliquid aperiam, fugiat beatae cumque animi veritatis molestiae culpa sit molestias at quae ipsa!
-    atum quam, debitis nulla, cupiditate minus quis id dolor corrupti? Dolore, asperiores eum?
+    <h1>]
+        <img src="img/a.png" alt="">
+        <aaaa>aa</aaaa>
+        <aaaa>aa</aaaa>
+        <aaaa>aa</aaaa>
+
+    </h1>
 </body>
 </html>
